--- a/po/nb.po
+++ b/po/nb.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-ugly 0.10.6\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-08-30 15:37+0200\n"
+"POT-Creation-Date: 2010-10-15 15:20+0100\n"
 "PO-Revision-Date: 2007-11-02 14:39+0100\n"
 "Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
 "Language-Team: Norwegian Bokmaal <i18n-nb@lister.ping.uio.no>\n"
@@ -44,6 +44,15 @@ msgid ""
 msgstr ""
 "Kunne ikke åpne DVD-tittel %d. Interaktive titler er ikke støttet av dette "
 "elementet"
+
+msgid ""
+"Could not read DVD. This may be because the DVD is encrypted and a DVD "
+"decryption library is not installed."
+msgstr ""
+
+#, fuzzy
+msgid "Could not read DVD."
+msgstr "Kunne ikke åpne DVD"
 
 msgid "Failed to configure LAME encoder. Check your encoding parameters."
 msgstr "Kunne ikke konfigurere LAME-koder. Sjekk parameterene for kodingen."
