--- a/po/uk.po
+++ b/po/uk.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-ugly 0.10.6\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-08-30 15:37+0200\n"
+"POT-Creation-Date: 2010-10-15 15:20+0100\n"
 "PO-Revision-Date: 2007-07-05 11:16+0300\n"
 "Last-Translator: Maxim V. Dziumanenko <dziumanenko@gmail.com>\n"
 "Language-Team: Ukrainian <translation-team-uk@lists.sourceforge.net>\n"
@@ -47,6 +47,15 @@ msgid ""
 msgstr ""
 "Не вдається відкрити заголовок DVD %d. Інтерактивні заголовки не "
 "підтримуються цим елементом"
+
+msgid ""
+"Could not read DVD. This may be because the DVD is encrypted and a DVD "
+"decryption library is not installed."
+msgstr ""
+
+#, fuzzy
+msgid "Could not read DVD."
+msgstr "Не вдається відкрити DVD"
 
 msgid "Failed to configure LAME encoder. Check your encoding parameters."
 msgstr "Помилка при налаштовуванні кодера LAME. Перевірте параметри кодування."
