--- a/po/el.po
+++ b/po/el.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-ugly 0.10.12.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-08-30 15:37+0200\n"
+"POT-Creation-Date: 2010-10-15 15:20+0100\n"
 "PO-Revision-Date: 2009-07-29 18:18+0300\n"
 "Last-Translator: Simos Xenitellis <simos.lists@googlemail.com>\n"
 "Language-Team: Greek <team@lists.gnome.gr>\n"
@@ -44,6 +44,15 @@ msgid ""
 msgstr ""
 "Δεν ήταν δυνατό το άνοιγμα του τίτλου DVD %d. Οι διαδραστικοί τίτλοι δεν "
 "υποστηρίζονται από αυτό το στοιχείο"
+
+msgid ""
+"Could not read DVD. This may be because the DVD is encrypted and a DVD "
+"decryption library is not installed."
+msgstr ""
+
+#, fuzzy
+msgid "Could not read DVD."
+msgstr "Δεν ήταν δυνατό το άνοιγμα του DVD"
 
 msgid "Failed to configure LAME encoder. Check your encoding parameters."
 msgstr ""
