--- a/po/gl.po
+++ b/po/gl.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-ugly 0.10.14.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-09-02 22:26+0100\n"
+"POT-Creation-Date: 2010-10-15 15:20+0100\n"
 "PO-Revision-Date: 2010-05-30 15:49+0200\n"
 "Last-Translator: Fran Diéguez <frandieguez@ubuntu.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
@@ -44,6 +44,15 @@ msgid ""
 msgstr ""
 "Non foi posíbel abrir o título %d de DVD. Este elemento non é compatíbel cos "
 "títulos interactivos"
+
+msgid ""
+"Could not read DVD. This may be because the DVD is encrypted and a DVD "
+"decryption library is not installed."
+msgstr ""
+
+#, fuzzy
+msgid "Could not read DVD."
+msgstr "Non foi posíbel abrir o DVD"
 
 msgid "Failed to configure LAME encoder. Check your encoding parameters."
 msgstr ""
