--- a/po/id.po
+++ b/po/id.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gst-plugins-ugly 0.10.11.2\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-09-02 22:26+0100\n"
+"POT-Creation-Date: 2010-10-15 15:20+0100\n"
 "PO-Revision-Date: 2009-06-13 22:02+0700\n"
 "Last-Translator: Andhika Padmawan <andhika.padmawan@gmail.com>\n"
 "Language-Team: Indonesian <translation-team-id@lists.sourceforge.net>\n"
@@ -42,6 +42,15 @@ msgid ""
 msgstr ""
 "Tak dapat membuka judul DVD %d. Judul interaktif tidak didukung oleh elemen "
 "ini"
+
+msgid ""
+"Could not read DVD. This may be because the DVD is encrypted and a DVD "
+"decryption library is not installed."
+msgstr ""
+
+#, fuzzy
+msgid "Could not read DVD."
+msgstr "Tak dapat membuka DVD"
 
 msgid "Failed to configure LAME encoder. Check your encoding parameters."
 msgstr "Gagal mengatur penyandi LAME. Cek parameter penyandian anda."
